[tool.poetry]
name = "nujo"
version = "0.2.0"
description = "A Reverse-mode Automatic Differentiation library for Neural Networks"
authors = ["Victor Velev <victorivelev@gmail.com>",
           "Victor Gorchilov <victor@gorchilov.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
graphviz = "^0.13.2"
requests = "^2.23.0"
pillow = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.3.4"
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"
yapf = "^0.29.0"
pdoc3 = "^0.7.5"
jupyter = "^1.0.0"
torch = "^1.5.0"
python-mnist = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
